--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "V2ray-Heroku部署",
-  "description": "Deploy V2ray to Heroku.",
+  "name": "SPKK-Heroku部署",
+  "description": "Deploy SPKK to Heroku.",
   "keywords": [
     "V2ray"
   ],
